<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        tools:context="com.example.android.quizapp.Quiz">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/sports_quiz"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/question_1_who_is_the_nfl_s_all_time_leading_rusher"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/jim_brown" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/curtis_martin" />

            <RadioButton
                android:id="@+id/question_1_correct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/emmit_smith" />

            <RadioButton

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/ladainian_tomilson" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/barry_sanders" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/question_2_who_holds_the_record_for_most_yards_gained_in_a_season_and_as_a_rookie"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/thurman_thomas" />

            <RadioButton
                android:id="@+id/question_2_correct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/eric_dikerson" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/adrian_peterson" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/oj_simpson" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/terrell_davis" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/question_3_who_is_the_nba_s_all_time_leading_scorer"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/Kareem_Abdul_Jabbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/kareem_abdul_jabbar" />

        <CheckBox
            android:id="@+id/Wilt_Chamberlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/wilt_chamberlin" />

        <CheckBox
            android:id="@+id/Kobe_Bryant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/kobe_bryant" />

        <CheckBox
            android:id="@+id/Michael_Jordan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/michael_jordan" />

        <CheckBox
            android:id="@+id/Karl_Malone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/karl_malone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/question_4_who_is_the_nba_s_all_time_assists_leader"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/oscar_robertson" />

            <RadioButton
                android:id="@+id/question_4_correct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/john_stockson" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/jason_kidd" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/steve_nash" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/magic_johnson" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/question_5_who_is_mlb_s_baseball_all_time_strike_out_king"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/greg_maddux"/>

            <RadioButton
                android:id="@+id/question_5_correct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nolan_ryan" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/roger_clemens" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/randy_johnson" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/enter_your_name_below"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:padding="8dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@color/colorPrimary"
            android:onClick="submitAnswers"
            android:padding="16dp"
            android:text="@string/submit_answers" />


    </LinearLayout>
</ScrollView>